Adding element_at support.

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,5 +1,5 @@
-sequence_test : sequence_test.cpp ../include/sequence.h
-	g++ --std=c++11 -O3 -g sequence_test.cpp -pthread -lgtest -L/usr/lib/x86_64-linux-gnu -lboost_coroutine -lboost_context -o sequence_test
+sequence_test : sequence_test.cpp ../include/sequence.h Makefile
+	g++ --std=c++11 -g -Wextra -Werror sequence_test.cpp -pthread -lgtest -L/usr/lib/x86_64-linux-gnu -lboost_coroutine -lboost_context -o sequence_test
 
 test : sequence_test
 	./sequence_test
