Getting rid of std::experimental and changed to sequencing.  Changed >> to |.

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,5 +1,5 @@
 sequence_test : sequence_test.cpp ../include/sequence.h Makefile
-	g++ --std=c++1y -g -ggdb -Wextra -Werror sequence_test.cpp -MMD -MP -MF"$@.d" -MT"$@" -pthread -lgtest -L/usr/lib/x86_64-linux-gnu -lboost_coroutine -lboost_context -o sequence_test
+	g++ --std=c++1y -g -ggdb -Wextra -Werror sequence_test.cpp -MMD -MP -MF"$@.d" -MT"$@" -pthread -lgtest -L/usr/lib/x86_64-linux-gnu -lboost_coroutine -lboost_context -lboost_system -o sequence_test
 
 test : sequence_test
 	./sequence_test
