--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,12 @@ test/callgrind.out.*
 # Editor swap files
 *~
 .*.swp
+
+# BiiCode outputs
+bii/build
+bii/deps
+bii/cmake
+bii/settings.bii
+bii/policies.bii
+bii/.hive.db
+bin
