--- a/biicode.conf
+++ b/biicode.conf
@@ -1,14 +1,11 @@
 # Biicode configuration file
 
 [requirements]
-	 biicode/boost: 7
+	 biicode/boost: 8
 	 google/gtest: 10
 
 [parent]
-    # The parent version of this block. Must match folder name. E.g.
-    # user/block  # No version number means not published yet
-    # You can change it to publish to a different track, and change version, e.g.
-    # user/block(track): 7
+    skizzay/sequence: 0
 
 [paths]
     # Local directories to look for headers (within block)
@@ -28,6 +25,7 @@
 [tests]
     # Manual adjust of files that define a CTest test
     # test/* pattern to evaluate this test/ folder sources like tests
+    test/*
 
 [hooks]
     # These are defined equal to [dependencies],files names matching bii*stage*hook.py
@@ -35,13 +33,12 @@
     # CMakeLists.txt + bii/my_post_process1_hook.py bii_clean_hook.py
 
 [includes]
-    gtest/*.h: google/gtest/include
     # Mapping of include patterns to external blocks
     # hello*.h: user3/depblock  # includes will be processed as user3/depblock/hello*.h
+    gtest/*.h: google/gtest/include
 
 [data]
     # Manually define data files dependencies, that will be copied to bin for execution
     # By default they are copied to bin/user/block/... which should be taken into account
     # when loading from disk such data
     # image.cpp + image.jpg  # code should write open("user/block/image.jpg")
-
