--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 ADD_BII_TARGETS()
 
 
+TARGET_COMPILE_OPTIONS(${BII_BLOCK_TARGET} INTERFACE "-Wall")
+TARGET_COMPILE_OPTIONS(${BII_BLOCK_TARGET} INTERFACE "-Wextra")
+TARGET_COMPILE_OPTIONS(${BII_BLOCK_TARGET} INTERFACE "-Werror")
 IF(APPLE)
    TARGET_COMPILE_OPTIONS(${BII_BLOCK_TARGET} INTERFACE "-std=c++1y -stdlib=libc++")
 ELSEIF (WIN32 OR UNIX)
