--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 ADD_BII_TARGETS()
 
+SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 
 TARGET_COMPILE_OPTIONS(${BII_BLOCK_TARGET} INTERFACE "-Wall")
 TARGET_COMPILE_OPTIONS(${BII_BLOCK_TARGET} INTERFACE "-Wextra")
